# HA-Battery-Notes

./: .devcontainer.json  .gitignore  .ruff.toml  404.html  CONTRIBUTING.md  LICENSE  README.md  README_EXAMPLE.md  crowdin.yml  hacs.json  index.html  library.md  mkdocs.yaml  mkdocs.yml  pyproject.toml  renovate.json  requirements.txt  requirements_dev.txt  requirements_test.txt  schema.json  sitemap.xml
.devcontainer/frontend/: devcontainer.json
.devcontainer/integration/: Dockerfile  devcontainer.json
.github/: FUNDING.yaml  copilot-instructions.md  dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml  bug.yml  feature_request.yml  new-device.yml  new_device_request.yaml  new_device_request.yml  new_language_request.yaml
.github/scripts/library_doc/: generate_file.py  update_library_files.py
.github/workflows/: crowdin-download.yaml  crowdin-upload-all.yaml  crowdin-upload.yaml  deploy_docs.yaml  deploy_docs.yml  json_librarian.yaml  json_librarian.yml  json_library_sort.yml  json_library_upload.yaml  json_library_upload.yml  json_validate.yaml  json_validate.yml  lint.yaml  lint.yml  new-device.yml  new_device.yaml  new_device.yml  release.yaml  release.yml  stale.yaml  validate.yaml  validate.yml
actions/: index.html
blueprints/: battery_notes_battery_not_replaced.yaml  battery_notes_battery_not_reported.yaml  battery_notes_battery_replaced.yaml  battery_notes_battery_threshold.yaml  index.html
community/: index.html
config/: configuration.yaml
configuration/: index.html
custom_components/battery_notes/: __init__.py  abstract.py  binary_sensor.py  button.py  common.py  config_flow.py  const.py  coordinator.py  device.py  diagnostics.py  discovery.py  entity.py  errors.py  filters.py  icons.json  last_changed_store.py  library.py  library_coordinator.py  library_updater.py  manifest.json  old __init__.py  panel.py  repairs.py  schema.json  sensor.py  services.py  services.yaml  store.py  template_helpers.py  websockets.py
custom_components/battery_notes/data/: library-dev.json  library.json  schema.json
custom_components/battery_notes/frontend/: .eslintrc.js  .prettierrc  battery-notes-panel.js  package-lock.json  package.json  rollup.config.js  rollup.config.mjs  tsconfig.json
custom_components/battery_notes/frontend/localize/: localize.ts
custom_components/battery_notes/frontend/localize/languages/: de.json  en.json  es.json  et.json  fr.json  it.json  nl.json  no.json  sk.json  sv.json
custom_components/battery_notes/frontend/src/: alarm-panel.ts  battery-notes-panel.ts  battery-panel.ts  const.ts  fire_event.ts  helpers.ts  load-ha-elements.ts  smart-irrigation.ts  styles.ts  subscribe-mixin.ts  types.ts
custom_components/battery_notes/frontend/src/common/: modes.ts  navigation.ts
custom_components/battery_notes/frontend/src/components/: alarmo-table.ts  batterynotes-table.ts  collapsible-section.ts  settings-row.ts  time-slider.ts
custom_components/battery_notes/frontend/src/data/: actions.ts  common.ts  sensors.ts  websockets.ts
custom_components/battery_notes/frontend/src/dialogs/: confirm-delete-dialog.ts  confirmation-dialog.ts  create-area-dialog.ts  create-sensor-group-dialog.ts  edit-master-dialog.ts  error-dialog.ts  manage-sensor-groups-dialog.ts
custom_components/battery_notes/frontend/src/views/: header-view.ts  table-view.ts
custom_components/battery_notes/frontend/src/views/actions/: automation-editor-card.ts  notification-editor-card.ts  view-actions.ts
custom_components/battery_notes/frontend/src/views/codes/: user-editor-card.ts  view-codes.ts
custom_components/battery_notes/frontend/src/views/devices/: devices-overview-card.ts  view_devices.ts
custom_components/battery_notes/frontend/src/views/general/: alarm-mode-card.ts  mqtt-config-card.ts  view-general.ts
custom_components/battery_notes/frontend/src/views/mappings/: view-mappings.ts
custom_components/battery_notes/frontend/src/views/modules/: view-modules.ts
custom_components/battery_notes/frontend/src/views/sensors/: add-sensors-card.ts  sensor-editor-card.ts  sensors-overview-card.ts  view-sensors.ts
custom_components/battery_notes/frontend/src/views/zones/: view-zones.ts
custom_components/battery_notes/translations/: ar.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es-ES.json  es.json  fi.json  fr.json  hu.json  it.json  lt.json  lv.json  nl.json  no.json  pl.json  pt-BR.json  pt.json  ru.json  sk.json  sr-Latn.json  sr.json  sv-SE.json  sv.json  tr.json  uk.json  ur-IN.json  ur.json  zh-Hans.json  zh-Hant.json
custom_components/battery_types/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  errors.py  manifest.json  sensor.py  switch.py
custom_components/battery_types/translations/: en.json
custom_components/data/: library.json
custom_components/integration_blueprint/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  switch.py
custom_components/integration_blueprint/translations/: en.json
docs/: CNAME  actions.md  blueprints.md  community.md  configuration.md  entities.md  events.md  faq.md  index.md  library.md  services.md  translations.md
docs/blueprints/: battery_notes_battery_not_replaced.yaml  battery_notes_battery_not_reported.yaml  battery_notes_battery_replaced.yaml  battery_notes_battery_threshold.yaml
entities/: index.html
events/: index.html
faq/: index.html
scripts/: develop  lint  setup  test  validate_library
search/: search_index.json
tests/: README.md  __init__.py  conftest.py  test_config_flow.py  test_init.py
translations/: index.html
